tests/snapshot/error/source_locations/expression/assign/super_check_this_initialized.js
class B {
  foo = 1;
}

class C extends B {
  constructor() {
    super.foo = 2;
  }
}

new C();